# libwwz

./: .gitignore  .mypy.ini  .pylintrc  LICENSE  README.md  bitbucket-pipelines.yml  dev_requirements.txt  pylintrc  pyproject.toml  requirements.txt  run_api_doc_gen.sh  run_deploy.sh  run_mypy.sh  run_pylint.sh  run_tests.sh  setup.py
.github/workflows/: create_release.yml
beta_wwz/: beta_wwz.py
docs/libwwz/: index.html  libwwz demo 1 Sinusoid with Randomly Removed Data v1.0.html  libwwz demo 2 Smartphone Accelerometer Data v1.0.html  plot_methods.html  wwz.html  wwz_beta.html
examples/: example_wwz.py  example_wwz_parallel.py
libwwz/: __init__.py  plot_methods.py  wwz.py  wwz_beta.py
plotting/: plot_methods.py
scripts/: run_api_doc_gen.sh  run_clean.sh  run_deploy.sh  run_mypy.sh  run_pylint.sh  run_tests.sh
tests/: test_beta_wwz.py  test_wwz.py
