# See:
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project]
name = "libwwz"
version = "1.3.4"
authors = [
    { name = "RedVox, Inc", email = "support@redvox.io" }
]
description = "Library for computing the weighted wavelet Z transform."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

dependencies = [
    "joblib==1.4.2",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
]

[project.urls]
homepage = "https://github.com/RedVoxInc/libwwz"
PyPI = "https://pypi.org/project/libwwz/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["libwwz*"]
